# RelayX

./: .env.example  .gitignore  Cargo.toml  P0_STATUS.md  README.md  justfile  package.json  proxy-control-dev-plan-v0.1.md
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css
apps/web/app/_components/: CommandBlock.tsx  ConsoleCard.tsx  P0Console.tsx
apps/web/app/clients/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/deployments/: page.tsx
apps/web/app/logs/: page.tsx
apps/web/app/nodes/: page.tsx
apps/web/app/profiles/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/tests/: console_contract.test.mjs
crates/compiler-xray/: Cargo.toml
crates/compiler-xray/src/: lib.rs
crates/compiler-xray/tests/: real_xray_contract.rs  xray_compiler_contract.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: lib.rs  main.rs
crates/control-plane/tests/: api_contract.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/tests/: domain_contract.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  main.rs
crates/runner/tests/: real_xray_runner_contract.rs  runner_contract.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: postgres_store_contract.rs  store_contract.rs
crates/subscription/: Cargo.toml
crates/subscription/src/: lib.rs
crates/subscription/tests/: subscription_contract.rs
docs/: architecture-v0.1.md
docs/adr/: 0001-product-boundary.md  0002-runner-trust-model.md  0003-profile-ir-source-of-truth.md  0004-a2a-edge-only.md
docs/ir/: profile-ir-v0.md
docs/runner/: trust-model.md
migrations/: 0001_p0_schema.sql
scripts/: e2e_smoke.sh  postgres_smoke.sh  runner_xray_smoke.sh  xray_smoke.sh
